Changed the bot response name to StanGPT

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -18,7 +18,7 @@
             <div class="message-container user-message"><strong>{{ username }}:</strong> {{ user_message }}</div>
         {% endif %}
         {% if bot_response %}
-            <div class="message-container bot-message"><strong>Gemini:</strong> {{ bot_response }}</div>
+            <div class="message-container bot-message"><strong>StanGPT:</strong> {{ bot_response }}</div>
         {% endif %}
 
         <form method="POST">
